<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_county_label"
        android:key="@string/pref_county_key"
        android:defaultValue="@string/pref_county_dublin"
        android:entryValues="@array/pref_county_values"
        android:entries="@array/pref_county_options" />


    <EditTextPreference
        android:title="@string/pref_num_days_keep_label"
        android:key="@string/pref_numberOfDaysToKeepProperty"
        android:defaultValue="@string/pref_numberOfDaysToKeepPropertyDefault"
        android:inputType="text"
        android:singleLine="true" />


    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>
