<!-- Master layout. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/detail_address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/grey_700" />

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/detail_date_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/grey_700"
            android:textSize="16sp" />

        <!-- Main content: high, low, art, weather state -->
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="left"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/detail_price_textview"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="96sp" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/detail_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cardList"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <TextView
                android:id="@+id/detail_title_description_textview"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/detail_content_description_textview"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textColor="@color/grey_700"
                android:textSize="16sp"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/detail_title_features_textview"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/detail_features_textview"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textColor="@color/grey_700"
                android:textSize="16sp"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/detail_title_accommodation_textview"
                android:layout_height="wrap_content"
                android:text="@string/accommodation"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/detail_accommodation_textview"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textColor="@color/grey_700"
                android:textSize="16sp"
                android:fontFamily="sans-serif-condensed"/>


            <TextView
                android:id="@+id/detail_title_ber_textview"
                android:layout_height="wrap_content"
                android:text="@string/ber"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/detail_ber_textview"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:textColor="@color/grey_700"
                android:textSize="16sp"
                android:fontFamily="sans-serif-condensed"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
